[package]
name            = "qiniu"
version         = "0.1.2"
license         = "MIT"
authors         = ["mitum <dangcheng@hotmail.com>"]
description     = "qiniu"
documentation   = "https://docs.rs/qiniu"
homepage        = "https://github.com/mitum/qiniu"
repository      = "https://github.com/mitum/qiniu-rs"
readme          = "README.md"
keywords        = ["qiniu", "cdn"]
exclude         = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
ring = "0.13"
data-encoding = "2.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]
